[package]
name = "wifi2dcom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap", "clap-parse"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serialport = "4.2.2"
